# TelegramVoice

./: .env.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  DEPLOY_INSTRUCTIONS.md  FINAL-STATUS.md  GITHUB_ENVIRONMENT.md  GITHUB_SECRETS.md  MAKE_PRIVATE_REPO.md  README.md  STATUS.md  USER-SYNC-FIXED.md  WEBSOCKET-FIX.md  WEBSOCKET-WORKING.md  WSS-STATUS-FINAL.md  auto-deploy.sh  backup-ws-server.js  check-nginx-ws.sh  check-services.sh  deploy-simple-ws.sh  deploy.sh  dev.sh  diagnose-port-8080.sh  diagnose-websocket.sh  docker-compose.yml  ecosystem.config.js  emergency-fix.sh  final-websocket-fix.sh  fix-all.sh  fix-nginx-websocket.sh  fix-services.sh  fix-ssl-nginx.sh  fix-user-sync.sh  fix-websocket.sh  fix-wss-mixed-content.sh  force-ws-start.sh  full-diagnosis.sh  monitor.sh  nginx-fixed.conf  nginx-turn-config.conf  (+28 more)
.claude/: settings.local.json
.githooks/: pre-commit
.github/workflows/: ci-cd.yml  pr-check.yml  simple-deploy.yml
docs/: ICE_SERVERS_SETUP.md
mini-app/: Dockerfile  next.config.ts  package-lock.json  package.json
mini-app/public/: audio-worklet-processor.js  test-local.html
mini-app/src/app/: globals.css  layout.tsx  page.tsx
mini-app/src/components/: DebugModal.tsx  ICEStatus.tsx  MediaPermissionModal.tsx  MicrophoneError.tsx  PermissionBlockedHelp.tsx  RoomsList.tsx  SettingsPage.tsx  SimpleRoomsList.tsx  SimpleVoiceRoom.tsx  VoiceRoom.tsx  (+1 more)
signaling-server/: Cargo.toml  Dockerfile
signaling-server/src/: main.rs
websocket-server/: Dockerfile  README.md  package.json  test-server.js  tsconfig.json
websocket-server/src/: index.ts
(+16 files in other folders)
