[package]
name = "signaling-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.23"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
futures-util = "0.3"
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
dashmap = "6.1"
chrono = { version = "0.4", features = ["serde"] }
